# patchcraft

./: .gitignore  Dockerfile  LICENSE  README.md  generate.sh  generate_tiles.sh  pyproject.toml  requirements.txt  run_tile_sampling_for_whole_data_set.sh
src/patchcraft/: __main__.py  config.yaml  diagnosis_maps.py  utils.py
src/patchcraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/patchcraft/create_info_file/: config.py  create_info_file.py
src/patchcraft/get_overview/: config.py  get_overview.py
src/patchcraft/sample_data/: config.py  sample_data.py
src/patchcraft/sample_tiles/: augment.py  config.py  sample_tiles.py
src/patchcraft/view_files/: config.py  view_files.py
